--- a/common-rest-support/.project
+++ b/common-rest-support/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>common-rest-support</name>
+	<name>cinnamon-common</name>
 	<comment></comment>
 	<projects>
 	</projects>
