--- a/cinnamon-web-template-basic/build.gradle
+++ b/cinnamon-web-template-basic/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 	compile "org.webjars.bower:angular-loading-bar:0.8.0"
 	compile "org.webjars.bower:angular-ui-select:0.12.0"
 	compile "org.webjars.bower:angular-toastr:1.4.1"
+	compile 'org.webjars.bower:angular-ui-router:0.2.15'
+	
 	compile "org.webjars.bower:animate.css:3.3.1"
 	compile "org.webjars:ng-flow:2.6.1"
 //	compile "org.webjars.bower:bootbox:4.4.0"
