repository를 spring data 스타일로 모두 변경

--- a/cinnamon-core/build.gradle
+++ b/cinnamon-core/build.gradle
@@ -12,8 +12,8 @@ dependencies {
 	
 	compile "javax.servlet:javax.servlet-api"
 	
-	runtime "com.h2database:h2"
-	compile "mysql:mysql-connector-java"
+//	runtime "com.h2database:h2"
+//	compile "mysql:mysql-connector-java"
 	
 	compile project(":cinnamon-core-domain")
 }
