--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ apply plugin: 'eclipse'
 subprojects {
 	apply plugin: 'maven'
 	apply plugin: 'java'
-	apply plugin: 'eclipse-wtp'
+//	apply plugin: 'eclipse-wtp'
 	apply plugin: 'spring-boot'
 	apply plugin: 'io.spring.dependency-management'
 	
@@ -34,17 +34,57 @@ subprojects {
 	sourceCompatibility = 1.8
 	targetCompatibility = 1.8
 	
+	
+	sourceSets {
+		generated {
+			java {
+				srcDirs = ["src/main/generated"]
+			}
+		}
+	}
+	
+	configurations {
+		querydslapt
+	}
+	
+	
 	dependencies {
 		testCompile "org.springframework.boot:spring-boot-starter-test"
+		
+		querydslapt 'com.mysema.querydsl:querydsl-apt:3.6.7'
 	}
 	
 	bootRepackage  {
 		enabled = false
 	}
 	
-//	task wrapper(type: Wrapper) {
-//		gradleVersion = '2.6'
-//	}
+	
+	//--queryDSL query객체 생성관련 태스크------
+	task generateQueryDSL(type: JavaCompile, group: 'build', description: 'Generates the QueryDSL query types') {
+		source = sourceSets.main.java
+		classpath = configurations.compile + configurations.querydslapt
+		options.compilerArgs = [
+			"-proc:only",
+			"-processor", "com.mysema.query.apt.jpa.JPAAnnotationProcessor"
+		]
+		destinationDir = sourceSets.generated.java.srcDirs.iterator().next()
+	}
+	
+	compileJava {
+		dependsOn generateQueryDSL
+		source generateQueryDSL.destinationDir
+	}
+	
+	compileGeneratedJava {
+		dependsOn generateQueryDSL
+		options.warnings = false
+		classpath += sourceSets.main.runtimeClasspath
+	}
+	
+	clean {
+		delete sourceSets.generated.java.srcDirs
+	}
+	//----------------------------------
 }
 
 task wrapper(type: Wrapper) {
