--- a/cinnamon-web-template-basic/build.gradle
+++ b/cinnamon-web-template-basic/build.gradle
@@ -1,47 +1,37 @@
 /*
-buildscript {
+ buildscript {
+ }
+ plugins {
+ id "io.silksmith.plugin" version "0.6.2"
+ }
+ repositories {
+ maven {url="http://dl.bintray.com/silksmith-io/silk"}
+ }
+ closureCompileJS {
+ entryPoint = "app"
+ }
+ */
 
-}
-
-plugins {
-	id "io.silksmith.plugin" version "0.6.2"
-}
-
-repositories {
-	maven {url="http://dl.bintray.com/silksmith-io/silk"}
-}
-
-
-
-closureCompileJS {
-	entryPoint = "app"
-}
-*/
-
-plugins {
-  id "com.eriwen.gradle.js" version "1.12.1"
-}
+plugins { id "com.eriwen.gradle.js" version "1.12.1" }
 javascript.source {
-    dev {
-        js {
-            srcDir "src"
-            include "**/*.js"
-            exclude "**/*.min.js"
-        }
-    }
+	dev {
+		js {
+			srcDir "src"
+			include "**/*.js"
+			exclude "**/*.min.js"
+		}
+	}
 }
 combineJs {
-    source = javascript.source.dev.js.files
-    dest = file("${buildDir}/all.js")
+	source = javascript.source.dev.js.files
+	dest = file("${buildDir}/all.js")
 }
 
 minifyJs {
-    source = combineJs
-    dest = file("${buildDir}/all-min.js")
-    sourceMap = file("${buildDir}/all.sourcemap.json")
-    closure {
-        warningLevel = 'QUIET'
-    }
+	source = combineJs
+	dest = file("${buildDir}/all-min.js")
+	sourceMap = file("${buildDir}/all.sourcemap.json")
+	closure { warningLevel = 'QUIET' }
 }
 
 
@@ -66,14 +56,14 @@ dependencies {
 	compile "org.webjars.bower:angular-ui-select:0.12.0"
 	compile "org.webjars.bower:angular-toastr:1.4.1"
 	compile 'org.webjars.bower:angular-ui-router:0.2.15'
-	
+
 	compile "org.webjars.bower:animate.css:3.3.1"
 	compile "org.webjars:ng-flow:2.6.1"
-//	compile "org.webjars.bower:bootbox:4.4.0"
+	//	compile "org.webjars.bower:bootbox:4.4.0"
 	compile "org.webjars.bower:ngBootbox:0.1.1"
 	compile "org.webjars:font-awesome:4.4.0"
-	
-//	web "io.silksmith.libs:closure-base:1.0.0+smith.+" //goog lib (required)
-//	web "io.silksmith.libs:bootstrap-sass:3.3.3+smith.+" //lets use the sass sources of bootstrap
-//	web "io.silksmith.libs:jquery:1.11.2+smith.+" //and I guess you want to have some jquery
+
+	//	web "io.silksmith.libs:closure-base:1.0.0+smith.+" //goog lib (required)
+	//	web "io.silksmith.libs:bootstrap-sass:3.3.3+smith.+" //lets use the sass sources of bootstrap
+	//	web "io.silksmith.libs:jquery:1.11.2+smith.+" //and I guess you want to have some jquery
 }
