template 개발 - 해더 사이드바 푸터 개발중

--- a/cinnamon-web-configuration/build.gradle
+++ b/cinnamon-web-configuration/build.gradle
@@ -11,6 +11,9 @@ apply plugin: "com.eriwen.gradle.js"
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-mail"
 	compile "org.springframework.boot:spring-boot-starter-web"
-
+	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
+	compile "org.codehaus.groovy:groovy"
+	
+	
 	compile project(":cinnamon-web-template-basic")
 }
