--- a/cinnamon-web-template-basic/build.gradle
+++ b/cinnamon-web-template-basic/build.gradle
@@ -45,7 +45,7 @@ dependencies {
 	compile "org.webjars.bower:adminlte:2.3.0"
 	compile "org.webjars.bower:angularjs:1.4.3"
 	compile "org.webjars.bower:bootstrap:3.3.5"
-	compile "org.webjars.bower:angular-ui-bootstrap:0.13.1"
+	compile 'org.webjars.bower:angular-ui-bootstrap-bower:0.13.3'
 	compile "org.webjars.bower:angular-bootstrap-datetimepicker:0.3.13"
 	compile "org.webjars.bower:angular-loading-bar:0.8.0"
 	compile "org.webjars.bower:angular-ui-select:0.12.0"
