--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'eclipse'
 subprojects {
 	apply plugin: 'maven'
 	apply plugin: 'java'
+	apply plugin: 'eclipse'
 //	apply plugin: 'eclipse-wtp'
 	apply plugin: 'spring-boot'
 	apply plugin: 'io.spring.dependency-management'
