--- a/cinnamon-web-template-basic/build.gradle
+++ b/cinnamon-web-template-basic/build.gradle
@@ -56,7 +56,7 @@ dependencies {
 	compile "org.webjars:ng-flow:2.6.1"
 	//	compile "org.webjars.bower:bootbox:4.4.0"
 	compile "org.webjars.bower:ngBootbox:0.1.1"
-	compile 'org.webjars.bower:font-awsome:4.4.0'
+	compile 'org.webjars.bower:font-awesome:4.4.0'
 	compile 'org.webjars.bower:ionicons:2.0.0'
 
 	//	web "io.silksmith.libs:closure-base:1.0.0+smith.+" //goog lib (required)
