groovy 파일을 별도의 폴더로 옮김

--- a/cinnamon-web-configuration/build.gradle
+++ b/cinnamon-web-configuration/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 	dependencies { classpath "com.eriwen:gradle-js-plugin:1.12.1" }
 }
 
+apply plugin: 'groovy'
 apply plugin: "com.eriwen.gradle.js"
 
 
