--- a/cinnamon-core/build.gradle
+++ b/cinnamon-core/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-data-jpa"
 //	compile "org.springframework.boot:spring-boot-starter-data-rest"
+	compile "org.springframework.boot:spring-boot-starter-mail"
 	compile "org.springframework.security:spring-security-core"
 	compile "org.hibernate:hibernate-validator"
 	compile "com.mysema.querydsl:querydsl-jpa:3.6.7"
