--- a/cinnamon-web-configuration/build.gradle
+++ b/cinnamon-web-configuration/build.gradle
@@ -10,7 +10,7 @@ apply plugin: "com.eriwen.gradle.js"
 
 
 dependencies {
-	compile "org.springframework.boot:spring-boot-starter-mail"
+//	compile "org.springframework.boot:spring-boot-starter-mail"
 	compile "org.springframework.boot:spring-boot-starter-web"
 	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
 	
