--- a/cinnamon-web/build.gradle
+++ b/cinnamon-web/build.gradle
@@ -6,28 +6,20 @@ apply plugin: 'war'
 //	archiveName = "${baseName}.${extension}"
 //}
 
-bootRepackage  {
-	enabled = true
-}
-
 
 dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-	
+
 	compile project(":cinnamon-web-configuration")
-	
+
 	runtime "com.h2database:h2"
 }
 
 
 
 buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath "com.eriwen:gradle-js-plugin:1.12.1"
-  }
+	repositories { jcenter() }
+	dependencies { classpath "com.eriwen:gradle-js-plugin:1.12.1" }
 }
 
 apply plugin: "com.eriwen.gradle.js"
