--- a/cinnamon-web/src/main/resources/application.properties
+++ b/cinnamon-web/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
 
+logging.level.org.cinnamon=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 web.webroot=/
 internalFile.root=/
