--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 
 	<modules>
 		<module>cinnamon-core</module>
-		<module>cinnamon-web-template-basic</module>
-		<module>cinnamon-web</module>
-		<module>cinnamon-web-configuration</module>
+		<module>cinnamon-core-template</module>
+		<module>cinnamon-core-starter</module>
+		<module>cinnamon-core-web</module>
 	</modules>
 </project>
