--- a/cinnamon-core/pom.xml
+++ b/cinnamon-core/pom.xml
@@ -63,7 +63,7 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<scope>runtime</scope>
+			<scope>provided</scope>
 		</dependency>
 		
 		
