--- a/cinnamon-apps/pom.xml
+++ b/cinnamon-apps/pom.xml
@@ -1,51 +1,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cinnamon-core-web</artifactId>
-
+	<artifactId>cinnamon-apps</artifactId>
+	
 	<parent>
 		<groupId>org.cinnamon</groupId>
 		<artifactId>cinnamon-parent</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.thymeleaf.extras</groupId>
-			<artifactId>thymeleaf-extras-springsecurity3</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy</artifactId>
-		</dependency>
-
-
-		<dependency>
-			<groupId>org.cinnamon</groupId>
-			<artifactId>cinnamon-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.cinnamon</groupId>
-			<artifactId>cinnamon-core-template</artifactId>
-		</dependency>
-	</dependencies>
-
-
+	
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>com.mysema.maven</groupId>
+				<artifactId>apt-maven-plugin</artifactId>
+				<version>1.1.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/generated-sources/java</outputDirectory>
+							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -72,4 +53,17 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>com.mysema.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
+			<version>3.6.7</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cinnamon</groupId>
+			<artifactId>cinnamon-core-web</artifactId>
+		</dependency>
+	</dependencies>
 </project>
