--- a/pom.xml
+++ b/pom.xml
@@ -45,5 +45,32 @@
 		<module>cinnamon-core-template</module>
 		<module>cinnamon-core-starter</module>
 		<module>cinnamon-core-web</module>
+		<module>cinnamon-apps</module>
 	</modules>
+	
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.cinnamon</groupId>
+				<artifactId>cinnamon-apps</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.cinnamon</groupId>
+				<artifactId>cinnamon-core-web</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.cinnamon</groupId>
+				<artifactId>cinnamon-core-template</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.cinnamon</groupId>
+				<artifactId>cinnamon-core</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
