--- a/cinnamon-apps/pom.xml
+++ b/cinnamon-apps/pom.xml
@@ -62,8 +62,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.cinnamon</groupId>
-			<artifactId>cinnamon-core-web</artifactId>
+			<artifactId>cinnamon-core</artifactId>
 		</dependency>
 	</dependencies>
 </project>
