--- a/cinnamon-core-template/pom.xml
+++ b/cinnamon-core-template/pom.xml
@@ -17,6 +17,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
+			<artifactId>jquery</artifactId>
+			<version>2.1.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
 			<artifactId>angularjs</artifactId>
 			<version>1.4.5</version>
 		</dependency>
