--- a/cinnamon-core-web/pom.xml
+++ b/cinnamon-core-web/pom.xml
@@ -46,7 +46,7 @@
 
 	<build>
 		<plugins>
-			<plugin>
+			<!-- <plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<compilerId>groovy-eclipse-compiler</compilerId>
@@ -69,7 +69,7 @@
 				<artifactId>groovy-eclipse-compiler</artifactId>
 				<version>2.9.1-01</version>
 				<extensions>true</extensions>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
