--- a/cinnamon-core/pom.xml
+++ b/cinnamon-core/pom.xml
@@ -8,12 +8,10 @@
 		<artifactId>cinnamon-parent</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
-	
-	<!-- <properties>
-		<spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version>
-		<spring-data-jpa.version>1.9.0.RELEASE</spring-data-jpa.version>
-	</properties> -->
-	
+
+	<!-- <properties> <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version> 
+		<spring-data-jpa.version>1.9.0.RELEASE</spring-data-jpa.version> </properties> -->
+
 	<build>
 		<plugins>
 			<plugin>
@@ -65,8 +63,13 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
-		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
