--- a/cinnamon-core-template/pom.xml
+++ b/cinnamon-core-template/pom.xml
@@ -96,5 +96,10 @@
 			<artifactId>ng-flow</artifactId>
 			<version>2.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>iCheck</artifactId>
+			<version>1.0.2</version>
+		</dependency>
 	</dependencies>
 </project>
