--- a/cinnamon-core-starter/src/main/resources/application.properties
+++ b/cinnamon-core-starter/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
 
+logging.pattern.console=%date{yyyy-MM-dd:HH:mm:ss.SSS} %-5level %relative --- [%thread] %logger.%method\\(%file:%line\\) : %msg %n
 logging.level.org.cinnamon=DEBUG
 logging.level.org.springframework.security=DEBUG
 
