--- a/cinnamon-core-starter/pom.xml
+++ b/cinnamon-core-starter/pom.xml
@@ -52,9 +52,13 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.cinnamon</groupId>
 			<artifactId>cinnamon-core-web</artifactId>
+		</dependency> -->
+		<dependency>
+			<groupId>org.cinnamon</groupId>
+			<artifactId>cinnamon-core-web-material</artifactId>
 		</dependency>
 	</dependencies>
 </project>
