--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
 		<module>cinnamon-core</module>
 		<module>cinnamon-core-template</module>
 		<module>cinnamon-core-starter</module>
-		<module>cinnamon-core-web</module>
+		<!-- <module>cinnamon-core-web</module> -->
+		<module>cinnamon-core-web-material</module>
 		<module>cinnamon-apps</module>
 	</modules>
 	
@@ -54,6 +55,11 @@
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-apps</artifactId>
+				<version>0.2.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.cinnamon</groupId>
+				<artifactId>cinnamon-core-web-material</artifactId>
 				<version>0.2.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
