--- a/cinnamon-core-starter/src/main/resources/application.properties
+++ b/cinnamon-core-starter/src/main/resources/application.properties
@@ -2,6 +2,20 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://192.168.56.102:3306/daihanplatform
+spring.datasource.username=daihanplatform
+spring.datasource.password=daihanplatform5962
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.validation-query=select 1
+spring.datasource.test-on-borrow=true
+spring.datasource.test-while-idle=true
+spring.datasource.time-between-eviction-runs-millis=5000
+
+
+
+
+
 
 logging.pattern.console=%date{yyyy-MM-dd:HH:mm:ss.SSS} %-5level %relative --- [%thread] %logger.%method\\(%file:%line\\) : %msg %n
 logging.level.org.cinnamon=DEBUG
