--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -38,7 +38,7 @@
 			<artifactId>cinnamon-core</artifactId>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>3.3.6</version>
@@ -47,7 +47,7 @@
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-ui-bootstrap-bower</artifactId>
 			<version>0.14.3</version>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
