--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -89,6 +89,10 @@
 			<artifactId>angular-material-data-table</artifactId>
 			<version>0.9.8</version>
 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
+		</dependency>
 	</dependencies>
 
 
