웹 콘솔 개발중...

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 		<module>cinnamon-core</module>
 		<module>cinnamon-core-template</module>
 		<module>cinnamon-core-starter</module>
-		<!-- <module>cinnamon-core-web</module> -->
+		<module>cinnamon-core-web</module>
 		<module>cinnamon-core-web-material</module>
 		<module>cinnamon-apps</module>
 	</modules>
