--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -45,8 +45,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
-			<artifactId>angular-ui-bootstrap-bower</artifactId>
-			<version>0.14.3</version>
+			<artifactId>angular-ui-bootstrap</artifactId>
+			<version>1.1.2</version>
 		</dependency>
 		
 		<dependency>
