--- a/cinnamon-core-starter/src/main/resources/application.properties
+++ b/cinnamon-core-starter/src/main/resources/application.properties
@@ -2,15 +2,15 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://192.168.56.101:3306/cinnamon
-spring.datasource.username=cinnamon
-spring.datasource.password=cinnamon@5962
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.validation-query=select 1
-spring.datasource.test-on-borrow=true
-spring.datasource.test-while-idle=true
-spring.datasource.time-between-eviction-runs-millis=5000
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://192.168.56.101:3306/cinnamon
+#spring.datasource.username=cinnamon
+#spring.datasource.password=cinnamon@5962
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.validation-query=select 1
+#spring.datasource.test-on-borrow=true
+#spring.datasource.test-while-idle=true
+#spring.datasource.time-between-eviction-runs-millis=5000
 
 
 
