--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -50,6 +50,13 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>angular-ui-bootstrap</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+
+		
+		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular</artifactId>
 			<version>1.5.0-rc.1</version>
