--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -52,22 +52,22 @@
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular</artifactId>
-			<version>1.5.0-rc.1</version>
+			<version>1.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-animate</artifactId>
-			<version>1.5.0-rc.1</version>
+			<version>1.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-aria</artifactId>
-			<version>1.5.0-rc.1</version>
+			<version>1.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-messages</artifactId>
-			<version>1.5.0-rc.0</version>
+			<version>1.5.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.npm</groupId>
@@ -87,8 +87,17 @@
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-sanitize</artifactId>
-			<version>1.5.0-rc.1</version>
+			<version>1.5.2</version>
 		</dependency>
+		
+		
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>ng-file-upload</artifactId>
+			<version>12.0.4</version>
+		</dependency>
+		
+		
 		<!-- <dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-material-data-table</artifactId>
