--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,9 @@
 
 	<modules>
 		<module>cinnamon-core</module>
-		<module>cinnamon-core-template</module>
-		<module>cinnamon-core-starter</module>
-		<module>cinnamon-core-web</module>
+		<!-- <module>cinnamon-core-template</module> -->
+		<!-- <module>cinnamon-core-starter</module> -->
+		<!-- <module>cinnamon-core-web</module> -->
 		<module>cinnamon-core-web-material</module>
 		<module>cinnamon-apps</module>
 	</modules>
