--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -70,9 +70,9 @@
 			<version>1.5.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.webjars.npm</groupId>
+			<groupId>org.webjars</groupId>
 			<artifactId>angular-material</artifactId>
-			<version>1.0.6</version>
+			<version>1.1.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
@@ -96,13 +96,19 @@
 			<artifactId>ng-file-upload</artifactId>
 			<version>12.0.4</version>
 		</dependency>
-		
-		
+	 
 		<!-- <dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-material-data-table</artifactId>
 			<version>0.9.8</version>
 		</dependency> -->
+		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>momentjs</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+
 	</dependencies>
 
 
