--- a/cinnamon-core-starter/pom.xml
+++ b/cinnamon-core-starter/pom.xml
@@ -52,10 +52,10 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.cinnamon</groupId>
-			<artifactId>cinnamon-core-web</artifactId>
-		</dependency> -->
+			<artifactId>cinnamon-apps</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.cinnamon</groupId>
 			<artifactId>cinnamon-core-web-material</artifactId>
