개인 설정->비밀번호 관리 기능 개발중 메뉴 수정 화면 개발중

--- a/cinnamon-core/pom.xml
+++ b/cinnamon-core/pom.xml
@@ -130,5 +130,9 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.jolokia</groupId>
+			<artifactId>jolokia-core</artifactId>
+		</dependency>
 	</dependencies>
 </project>
