--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -113,6 +113,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jersey</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.opensaml</groupId>
+			<artifactId>openws</artifactId>
+			<version>1.4.2-1</version>
+		</dependency>
 	</dependencies>
 
 
