--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -108,6 +108,13 @@
 			<artifactId>momentjs</artifactId>
 			<version>2.12.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>nl.captcha</groupId>
+			<artifactId>simplecaptcha</artifactId>
+			<version>1.2.1-mvn</version>
+		</dependency>
+		
 	</dependencies>
 
 
