angular moment 라이브러리 추가

--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -108,7 +108,11 @@
 			<artifactId>momentjs</artifactId>
 			<version>2.12.0</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>angular-moment</artifactId>
+			<version>0.10.3</version>
+		</dependency>
 		<dependency>
 			<groupId>nl.captcha</groupId>
 			<artifactId>simplecaptcha</artifactId>
