--- a/cinnamon-core-web-material/pom.xml
+++ b/cinnamon-core-web-material/pom.xml
@@ -113,11 +113,11 @@
 			<artifactId>angular-moment</artifactId>
 			<version>0.10.3</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>nl.captcha</groupId>
 			<artifactId>simplecaptcha</artifactId>
 			<version>1.2.1-mvn</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 
