--- a/cinnamon-apps/pom.xml
+++ b/cinnamon-apps/pom.xml
@@ -22,7 +22,7 @@
 						</goals>
 						<configuration>
 							<outputDirectory>target/generated-sources/java</outputDirectory>
-							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 						</configuration>
 					</execution>
 				</executions>
@@ -56,9 +56,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.mysema.querydsl</groupId>
+			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
-			<version>3.6.7</version>
+			<version>4.1.3</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
