--- a/cinnamon-core/pom.xml
+++ b/cinnamon-core/pom.xml
@@ -9,9 +9,6 @@
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
-	<!-- <properties> <spring-hateoas.version>0.19.0.RELEASE</spring-hateoas.version> 
-		<spring-data-jpa.version>1.9.0.RELEASE</spring-data-jpa.version> </properties> -->
-
 	<build>
 		<plugins>
 			<plugin>
@@ -25,7 +22,7 @@
 						</goals>
 						<configuration>
 							<outputDirectory>target/generated-sources/java</outputDirectory>
-							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 						</configuration>
 					</execution>
 				</executions>
@@ -81,27 +78,22 @@
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>20041127.091804</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework.hateoas</groupId>
-			<artifactId>spring-hateoas</artifactId>
-		</dependency> -->
 		<dependency>
-			<groupId>com.mysema.querydsl</groupId>
+			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-apt</artifactId>
-			<version>3.6.7</version>
+			<version>4.1.3</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.mysema.querydsl</groupId>
+			<groupId>com.querydsl</groupId>
 			<artifactId>querydsl-jpa</artifactId>
-			<version>3.6.7</version>
+			<version>4.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
