--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.3.RELEASE</version>
+		<version>1.4.0.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -25,30 +25,16 @@
 		</plugins>
 	</build>
 
-	<!-- <dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.data</groupId>
-				<artifactId>spring-data-jpa</artifactId>
-				<version>1.9.0.RELEASE</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.hateoas</groupId>
-				<artifactId>spring-hateoas</artifactId>
-				<version>0.19.0.RELEASE</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement> -->
-
 	<modules>
 		<module>cinnamon-core</module>
-		<!-- <module>cinnamon-core-template</module> -->
-		<!-- <module>cinnamon-core-starter</module> -->
-		<!-- <module>cinnamon-core-web</module> -->
 		<module>cinnamon-core-web-material</module>
 		<module>cinnamon-apps</module>
 	</modules>
 	
+	<properties>
+		<main.basedir>${basedir}/../..</main.basedir>
+		<hibernate.version>4.3.11.Final</hibernate.version>
+	</properties>	
 	
 	<dependencyManagement>
 		<dependencies>
