--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ sudo: false
 
 branches:
   only:
-  - master
+    - master
 
 jdk:
   - oraclejdk8
+
+cache:
+  directories:
+    - $HOME/.m2
 
 script: mvn test
