--- a/cinnamon-core-web/pom.xml
+++ b/cinnamon-core-web/pom.xml
@@ -8,7 +8,7 @@
 		<artifactId>cinnamon-parent</artifactId>
 		<version>0.3.0-SNAPSHOT</version>
 	</parent>
-	
+
 	<build>
 		<plugins>
 			<plugin>
@@ -48,15 +48,15 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	
-	
+
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.cinnamon</groupId>
 			<artifactId>cinnamon-core</artifactId>
 		</dependency>
-	
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
@@ -64,9 +64,14 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		
+
+
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
