--- a/cinnamon-core-starter/pom.xml
+++ b/cinnamon-core-starter/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.cinnamon</groupId>
 		<artifactId>cinnamon-parent</artifactId>
-		<version>0.2.0-SNAPSHOT</version>
+		<version>0.2.0</version>
 	</parent>
 
 	<!-- <properties>
