--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cinnamon</groupId>
 	<artifactId>cinnamon-parent</artifactId>
-	<version>0.2.0</version>
+	<version>0.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -41,27 +41,27 @@
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-apps</artifactId>
-				<version>0.2.0</version>
+				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-core-web-material</artifactId>
-				<version>0.2.0</version>
+				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-core-web</artifactId>
-				<version>0.2.0</version>
+				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-core-template</artifactId>
-				<version>0.2.0</version>
+				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>org.cinnamon</groupId>
 				<artifactId>cinnamon-core</artifactId>
-				<version>0.2.0</version>
+				<version>0.3.0-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
