cmList component 개발중
기존에 mdList로 개발되어 있던 목록 표시 component를
material design의  data table 형태로 변경함.
이를 위해 개인 개발자가 개발한 data table 구현 component 를 사용
https://github.com/iamisti/mdDataTable

--- a/cinnamon-core-web/pom.xml
+++ b/cinnamon-core-web/pom.xml
@@ -78,19 +78,45 @@
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-material</artifactId>
-			<version>1.1.1</version>
+			<version>1.1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>angular-material-icons</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>angular-ui-router</artifactId>
 			<version>0.4.2</version>
 		</dependency>
+		<dependency> 
+			<groupId>org.webjars.bower</groupId>
+			<artifactId>lodash</artifactId>
+			<version>3.10.1</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>material-steppers</artifactId>
 			<version>1.0.3</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>github-com-iamisti-mdDataTable</artifactId>
+			<version>2.2.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.webjars.npm</groupId>
+					<artifactId>angular-animate</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.webjars.npm</groupId>
+					<artifactId>angular-material-icons</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		
 		<dependency>
 			<groupId>org.webjars.bower</groupId>
